fixed align

--- a/Style/style.css
+++ b/Style/style.css
@@ -161,6 +161,7 @@ hr{
 .course-rating{
     display: flex;
     justify-content: space-between;
+    align-items: center
 }
 .course-rating .star-filled{
     color:#FFC014;
